@@ -1,8 +1,8 @@
 0.2.4   future
 
-   o    changes to handle int64, etc ... fields better. Based on the new 
-   int64 package and related changes in Rcpp. This work has been sponsored by
-   the Google Open Source Programs Office
+   o    changes to handle int64, etc ... fields better. Based on the new
+        int64 package and related changes in Rcpp. This work has been
+        sponsored by the Google Open Source Programs Office
 
 0.2.3   2011-04-12
 
